# grasp

./: Makefile  README.md  backup.sh  grasp_client.html  grasp_nodejs_server.js  grasp_server.py  init_graspomatic.py  init_panel.py  install.sh  inventory_viewer.html  path_find.py  redis_6380.conf  redis_test.py  send_binary.py  startup.sh  test_aioredis.py  test_socketio.js  vcs.xml
AppliedMotionControl/: AppliedMotionControl.py  test.py
Dynamixel2Control/: Dynamixel2Control.py  Dynamixel2ControlOld.py  dynamixel_constants.py  dynamixel_functions.py  ping.py
GPIOD/: MagConstants.py  MagControl.py  gpiosetAsynchPractice.py  gpiosetPractice.py
controller/: controller.py  controller_client.py  tcp_client.py
dio/: Makefile  Makefile~  digout  digout.c  digout.c~  digout_mraa.c  digout_periodic  digout_periodic.c  digout_periodic.c~  schedrt  schedrt.cpp  schedrt.cpp~  testintr  testintr.c  testintr.c~  testtimer  testtimer.c
graspViewer/: gview3.lnk  gview3.tcl  online_touch_view.tcl
node-web-server/: index.html  index.js  package-lock.json  package.json  server.js  subscribe_dserv.js  tx_rx_dserv.js
node-web-server/public/: grasp_client.html  index.html  inventory.html
node-web-server/public/css/: sticky-footer-navbar.css
obssync/: .hwtimer.ko.cmd  .hwtimer.mod.o.cmd  .hwtimer.o.cmd  .obssync.ko.cmd  .obssync.mod.o.cmd  .obssync.o.cmd  Makefile  Makefile~  hwtimer.c  hwtimer.c~  hwtimer.ko  hwtimer.mod.c  modules.order  obssync.c  obssync.c~  obssync.ko  obssync.mod.c
obssync/.tmp_versions/: hwtimer.mod  obssync.mod
old_files/css/: sticky-footer-navbar.css
redis_conf_files/: redis-6380.conf  redis-server-6379  redis-server-6380  redis_6379.conf  redis_6380.conf
redis_conf_files/redis-6380-backup/: appendonly6380.aof  dump.rdb
sensors/: Makefile  Makefile~  mpr121  mpr121.c  mpr121.c~  pubsub  pubsub.cpp
shapes/DGZs/: blob2002.dgz  blob2007.dgz  blob2013.dgz  blob2014.dgz  blob2015.dgz  blob2016.dgz  blob2018.dgz  blob2019.dgz  blob2020.dgz  blob2021.dgz  blob2022.dgz  blob2023.dgz  blob2024.dgz  blob2027.dgz  blob2029.dgz  blob2030.dgz  blob2031.dgz  blob2032.dgz  blob2033.dgz  blob2035.dgz  blob2036.dgz  blob2037.dgz  blob2040.dgz  blob2041.dgz  blob2042.dgz  blob2043.dgz  blob2046.dgz  blob2047.dgz  blob2048.dgz  blob2050.dgz  blob2051.dgz  blob2052.dgz  blob2053.dgz  blob2056.dgz  blob2058.dgz  blob2059.dgz  blob2060.dgz  blob2061.dgz  blob2062.dgz  blob2063.dgz  (+20 more)
touch_sensor/: CMakeLists.txt  TouchSensor.hpp  test_touch.cpp  touch_sensor.cpp
web/: JSMQ.js  grasp_client.html  pubber.js  subber.js
yocto/meta-graspomatic/: README
(+18 files in other folders)
